feat: update list methods to use cursor based pagination
