# js/src/resources/subscriptions/subscriptions.ts
@@ -10,7 +10,8 @@ export class SubscriptionResource {
       pageId: args.pageId,
       status: args.status,
       limit: args.limit?.toString(),
-      skip: args.skip?.toString(),
+      starting_after: args.starting_after,
+      ending_before: args.ending_before,
     };
 
     return this.client.request<SubscriptionList>({
